[tool.poetry]
name = "4- status"
version = "0.1.0"
description = ""
authors = ["Yaroslav <yaroslav.nogovitsyn@yandex.ru>"]
readme = "README.md"
packages = [{include = "4"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
